<resources>
    <string name="app_name">帆社区</string>
    <string name="sw_version">FanHong v</string>
    <string name="Customerhotline">023-68872002</string>
    <string name="login">登录</string>
    <string name="logining">登录中……</string>
    <string name="login_fail">登录失败</string>
    <string name="login_success">登录成功</string>
    <string name="logined">已登录</string>
    <string name="login_noaccount">请输入手机号和密码</string>
    <string name="login_noaccount1">请输入手机号、验证码和密码</string>
    <string name="ask_exit">是否退出？</string>
    <string name="login_verificationcode">请输入验证码</string>
    <string name="phoneiswrong">请输入正确的电话号码！</string>
    <string name="delete">删除</string>
    <string name="delete_success">删除成功！</string>
    <string name="delete_failed">删除失败！</string>
    <string name="editor">编辑</string>
    <string name="whetherset">是否设置为默认地址</string>
    <string name="app_login">用户登录</string>
    <string name="login_user">请输入手机号</string>
    <string name="login_password">请输入密码</string>
    <string name="login_password1">请输入右侧验证码</string>
    <string name="randomcode">获取验证码</string>
    <string name="randoming">获取中……</string>
    <string name="login_remember">记住手机号和密码</string>
    <string name="forgetpassword">忘记密码？</string>
    <string name="startlogin">没有账号？立即注册</string>
    <string name="input_randomcode">请输入验证码</string>
    <string name="input_randomcode2">验证码不正确！请重新输入验证码！</string>
    <string name="tab_home">首页</string>
    <string name="tab_interact">互动</string>
    <string name="tab_accesscontrol">门禁</string>
    <string name="tab_service">服务</string>
    <string name="tab_mine">我的</string>
    <string name="ok">确定</string>
    <string name="cancel">取消</string>
    <string name="refuse">拒绝</string>
    <string name="receive">接受</string>
    <string name="fx">分享</string>
    <string name="lt">论坛</string>
    <string name="cy">参与</string>
    <string name="wd">我的</string>
    <string name="shequgonggao">社区公告</string>
    <string name="wuyezhixing">物业之星</string>
    <string name="zhaoshangdaili">招商代理</string>
    <string name="super_service">特色服务</string>
    <string name="often_service">常用服务</string>
    <string name="ylgh">医疗挂号</string>
    <string name="lygg">旅游观光</string>
    <string name="hwkg">海外狂购</string>
    <string name="jszb">讲师直播</string>
    <string name="jkzs">健康知识</string>
    <string name="xxyl">休闲娱乐</string>
    <string name="mydy">猫眼电影</string>
    <string name="hwwl">海外玩乐</string>
    <string name="shangmenweixiu">上门维修</string>
    <string name="guoyingjishu">过硬技术</string>
    <string name="rangnifangxin">让你放心</string>
    <string name="kuaidi">快递</string>
    <string name="daifa_express">代发快递</string>
    <string name="yourbehave">你的信任</string>
    <string name="anxintuofu">安心托付</string>
    <string name="rngs">让您感受</string>
    <string name="yzsfw">一站式服务</string>
    <string name="nsbd">你身边的</string>
    <string name="jtshgj">家庭生活管家</string>
    <string name="zbch">足不出户</string>
    <string name="ynwcns">也能完成年审</string>
    <string name="cellnews">社区新闻</string>
    <string name="newsdetail">新闻详情</string>
    <string name="getdatafailed">数据获取失败</string>
    <string name="keepcleanservice">保洁服务</string>
    <string name="familyservice">家庭服务</string>
    <string name="carryservice">搬运服务</string>
    <string name="otherservice">其他服务</string>
    <string name="nonetwork">网络连接失败，部分数据无法显示</string>
    <string name="nowife">当前为数据流量连接，请小心流量</string>
    <string name="party_zero">海棠晓月社区党委成员</string>
    <string name="party_one">海棠晓月社区党委一支部成员</string>
    <string name="party_two">海棠晓月社区党委二支部成员</string>
    <string name="party_three">海棠晓月社区党委三支部成员</string>
    <string name="userregister">用户注册</string>
    <string name="registering">注册中……</string>
    <string name="readandagree">我已阅读并同意</string>
    <string name="protocol">《帆社区用户协议》</string>
    <string name="protocol1">帆社区用户协议</string>
    <string name="register">注册</string>
    <string name="register_success">注册成功！</string>
    <string name="code_wrong">验证码错误！</string>
    <string name="userbeing">用户已存在！</string>
    <string name="system_wrong">系统错误！</string>
    <string name="resetpassword">重置密码</string>
    <string name="resetpassword_success">重置密码成功！</string>
    <string name="resetpassword_fail">重置密码失败！</string>
    <string name="doorkey">门禁钥匙</string>
    <string name="exit_app_tip">再按一次退出程序</string>
    <string name="notinscope">设备不在范围内</string>
    <string name="inscope">设备待机中</string>
    <string name="opendoorkey">一键开门禁</string>
    <string name="scanopen">扫一扫开门</string>
    <string name="authorizeopen">授权临时开门</string>
    <string name="choosecell">选择小区</string>
    <string name="chooselou">选择楼栋</string>
    <string name="inputservice">输入你需要的服务...</string>
    <string name="usersettings">账号设置</string>
    <string name="newsnotice">消息通知</string>
    <string name="mytradeno">我的订单</string>
    <string name="kehurexian">客户热线</string>
    <string name="tongyongsz">通用设置</string>
    <string name="aboutour">关于我们</string>
    <string name="noticepost">通知公告</string>
    <string name="moremore">更多>></string>
    <string name="notice">通知</string>
    <string name="action">活动</string>
    <string name="post">公告</string>
    <string name="pwsh">品味生活</string>
    <string name="keylogin">点击头像登录</string>
    <string name="headportrait">头像</string>
    <string name="nickname">昵称</string>
    <string name="account">账号</string>
    <string name="resetpsw">修改密码</string>
    <string name="modifynick">修改昵称</string>
    <string name="mygettingaddress">收货地址</string>
    <string name="save">保存</string>
    <string name="initialpassword">初始密码:</string>
    <string name="newpassword">新设密码:</string>
    <string name="confirmpassword">确认密码:</string>
    <string name="confirmchange">确认修改</string>
    <string name="initalpswwrong">初始密码不对!</string>
    <string name="newpswwrong">新设密码和确认密码不相同!</string>
    <string name="initalandnewissame">新设密码和初始密码相同，不用设置!</string>
    <string name="modifyaccount">修改账号</string>
    <string name="inputaccount">请输入账号</string>
    <string name="inputnick">请输入昵称</string>
    <string name="pleaselogin">请登录!</string>
    <string name="messagenotification">消息提醒</string>
    <string name="Eliminatecaching">消除缓存</string>
    <string name="exitaccount">退出账号</string>
    <string name="modifynick_success">修改昵称成功！</string>
    <string name="modifynick_fail">修改昵称失败！</string>
    <string name="getcode_success">获取验证码成功！请耐心等待服务器的短信</string>
    <string name="getcode_reget">重新获取验证码</string>
    <string name="inputisempty">输入不能为空！</string>
    <string name="clean_fail">清除失败</string>
    <string name="clean_success">清除成功</string>
    <string name="systemupgrade">系统更新</string>
    <string name="inputgoods">输入你需要的商品...</string>
    <string name="choosepay">请选择支付方式</string>
    <string name="wx_pay_result">微信支付结果</string>
    <string name="pay_success">支付成功！</string>
    <string name="cart">购物车</string>
    <string name="pull_to_load_next_page"></string>
    <string name="current_page_note">当前第%d页</string>
    <string name="loading_page_note">正在加载</string>
    <string name="confirmorder">确认订单</string>
    <string name="addaddress">选择地址</string>
    <string name="address">地址</string>
    <string name="orderdetail">订单详情</string>
    <string name="assess">评价</string>
    <string name="next">点击加载下一页</string>
    <string name="addgarden">添加小区门禁</string>
    <string name="clickopendoor">点击开门禁</string>
    <string name="chooseidentity">身份选择</string>
    <string name="postmessages">上传资料</string>
    <string name="checkidentity">身份验证</string>
    <string name="addapplydoors">添加钥匙申请</string>
    <string name="applydoorsuccess">添加成功</string>
    <string name="assesshit2">请输入楼栋号</string>
    <string name="example">示例：</string>
    <string name="connected">已连接</string>
    <string name="connectfail">连接失败</string>
    <string name="getcheck">点击获取验证码</string>
    <string name="regetcheck">秒后可重试</string>
    <string name="wlbky">网络连接不可用，请检查网络设置!</string>
    <string name="inputfangdongphone">请输入房东的注册的手机号</string>
    <string name="bianmin">便民服务</string>
    <string name="service_pay">生活缴费</string>
    <string name="service_dai">代办年审</string>
    <string name="service_store">社区卖场</string>
    <string name="service_lock">紧急开锁</string>
    <string name="service_park">闲时停车</string>
    <string name="service_fix">上门维修</string>
    <string name="service_door">门禁报修</string>
    <string name="service_kd">代发快递</string>
    <string name="service_clean">家政服务</string>
    <string name="service_talk">社区互动</string>
    <string name="service_es">二手市场</string>
    <string name="service_zsdl">招商代理</string>
    <string name="service_dang">政务系统</string>
    <string name="shunfeng">顺丰快递</string>
    <string name="yunda">韵达快递</string>
    <string name="shentong">申通快递</string>
    <string name="zhongtong">中通快递</string>
    <string name="EMS">EMS</string>
    <string name="yuantong">圆通快递</string>
    <string name="baishi">百世汇通</string>
    <string name="yszx">衣食住行</string>
    <string name="service_mt">美团</string>
    <string name="service_dz">大众点评</string>
    <string name="service_tb">淘宝</string>
    <string name="service_jds">京东</string>
    <string name="service_wph">唯品会</string>
    <string name="service_yms">亚马逊</string>
    <string name="service_xc">携程旅行</string>
    <string name="service_qne">去哪儿</string>
    <string name="service_tn">途牛</string>
    <string name="service_tc">同城旅游</string>
    <string name="jyyl">教育/医疗</string>
    <string name="service_hj">沪江网校</string>
    <string name="service_funhos">趣医院</string>
    <string name="service_ks">教师资格考试</string>
    <string name="service_gwy">公务员考试</string>
    <string name="service_zc">职称考试</string>
    <string name="service_my">母婴早教</string>
    <string name="dami">大米</string>
    <string name="you">食用油</string>
    <string name="mian">面食</string>
    <string name="jiu">酒水</string>
    <string name="zhifu_success">支付成功！</string>
    <string name="zhifu_failed">支付失败！</string>
    <string name="postgoods">上传卖品</string>
    <string name="starting">即将开通</string>
    <string name="opendoor">暂无大门安装门禁</string>
    <string name="newstitle">重庆帆社区的大数据建设为重庆经济带来飞跃性发展</string>
    <string name="newsplace">重庆商报</string>
    <string name="newstime">2017年7月4日  09:30</string>
    <string name="submit">提交</string>
    <string name="assesshit">写下商品评价来帮助其他小伙伴~</string>
    <string name="begin_search">开始搜索</string>
    <string name="unmatch_device">未匹配设备</string>
    <string name="match_device">已配对设备</string>
    <string name="ver1">发布版本：V</string>
    <string name="ver2">版本说明：</string>
    <string name="update_zwgx">暂时无更新版本...</string>
    <string name="sw_license">Copyright FanHong All Rights Reserved.</string>
    <string name="sw_license1">Copyright ©2015-2017\n重庆凡鸿通信技术有限公司</string>
    <string name="face_recognition">\n\u3000\u3000人脸识别，是基于人的脸部特征信息进行身份识别的一种生物识别技术。用摄像机或摄像头采集含有人脸的图像或视频流，并自动在图像中检测和跟踪人脸，进而对检测到的人脸进行脸部的一系列相关技术，通常也叫做人像识别、面部识别。\n\n\u3000\u3000凡鸿科技在2013年开发人脸识别，主要用于社区安防系统，打造智能、便捷、安全的社区生活环境。\n</string>
    <string name="verification_car_details">办理机动车年审预约的条件:
        \n\u3000\u3000(一) 已在公安机关交通管理部门登记的机动车, 摩托车不需预约。
        \n\u3000\u3000(二) 允许在车辆检验有效期满前3个月内或满后任一天内提出申请。车辆检验有效期可查看您的机动车行驶证副
        本。(如您的车辆检验有效期至2013年11月,则您可以从2013年9月1日起申请网上预约机动车年审服务) 。
        \n
        \n预约的时间范围:
        \n\u3000\u3000(一)预约从第二日起十个工作日内的年审服务。(如您在2013年9月1日可以预约9月2日~6日, 9月9日一13日之间
        的机动车年审服务)
        \n\u3000\u3000(二) 需要取消预约, 至少需提前一天提出申请。(非工作日也可提出取消申请)
        \n\u3000\u3000(三) 提供预约和取消预约服务的时间为每天5:30-23:30。
        \n
        \n免检车辆预约年审
        \n\u3000\u3000注册登记6年以内的非营运轿车和其他小型、微型载客汽车(面包车、7座及7座以上车辆和发生过人员1为伤亡交通事
        故的车辆除外) ,每2年需要定期检验时,机动车所有人可以预约我市公安机关交通管理部门车管总所、分所和大队违
        法处理室的受理窗口申请领取检验标志, 也可以到我市邮政部门对外服务窗口申请领取检验标志, 无需到检验机构进
        行安全技术检验 。\n</string>
    <string name="little_tip">请保持手机24小时畅通，稍后会有客服人员与你核对资料</string>
</resources>