<?xml version="1.0" encoding="utf-8"?>
<com.zhy.autolayout.AutoLinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/homeview_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:orientation="vertical">

    <com.zhy.autolayout.AutoRelativeLayout
        android:layout_width="match_parent"
        android:layout_height="80px"
        android:background="@color/white">

        <ImageView
            android:id="@+id/image_choosecell"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10px"
            android:padding="15px"
            android:src="@drawable/button_location" />

        <TextView
            android:id="@+id/show_cellname"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="显示小区"
            android:textSize="40px" />
    </com.zhy.autolayout.AutoRelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.zhy.autolayout.AutoLinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:orientation="vertical">

            <com.zhy.autolayout.AutoLinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:padding="8px"
                    android:src="@drawable/ilon_notice_" />

                <TextView
                    android:id="@+id/show_notice"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:ellipsize="end"
                    android:gravity="center_vertical"
                    android:maxLines="1"
                    android:paddingLeft="17px"
                    android:text="@string/sw_license"
                    android:textColor="#555"
                    android:textSize="22px" />
            </com.zhy.autolayout.AutoLinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="4px"
                android:layout_marginLeft="8px"
                android:layout_marginRight="8px"
                android:background="@color/bg1" />

            <com.sivin.Banner
                android:id="@+id/home_banner"
                android:layout_width="match_parent"
                android:layout_height="365px"
                app:banner_pointGravity="center_horizontal" />

            <com.zhy.autolayout.AutoLinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30px"
                android:layout_marginRight="30px"
                android:background="@color/white"
                android:gravity="center"
                android:orientation="horizontal"
                android:paddingBottom="9px"
                android:paddingTop="15px">

                <TextView
                    android:id="@+id/textView0"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:drawablePadding="10px"
                    android:drawableTop="@drawable/tonggao"
                    android:gravity="center"
                    android:text="@string/shequgonggao"
                    android:textColor="@color/textgray"
                    android:textSize="22px" />

                <TextView
                    android:id="@+id/textView1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:drawablePadding="5dp"
                    android:drawableTop="@drawable/button_tenement"
                    android:gravity="center"
                    android:text="@string/wuyezhixing"
                    android:textColor="@color/textgray"
                    android:textSize="22px" />

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:drawablePadding="5dp"
                    android:drawableTop="@drawable/lion_zhaoshangdaili"
                    android:gravity="center"
                    android:text="@string/zhaoshangdaili"
                    android:textColor="@color/textgray"
                    android:textSize="22px" />

            </com.zhy.autolayout.AutoLinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="10px"
                android:drawableLeft="@drawable/tesefuwu"
                android:drawablePadding="13px"
                android:paddingBottom="7px"
                android:paddingLeft="8px"
                android:paddingTop="7px"
                android:text="@string/super_service"
                android:textColor="@color/textgray"
                android:textSize="24px" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="4px"
                android:layout_marginLeft="8px"
                android:layout_marginRight="8px"
                android:background="@color/bg1" />

            <com.zhy.autolayout.AutoLinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tv_homestore"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:drawablePadding="10px"
                    android:drawableTop="@drawable/test_cloudpos_store"
                    android:gravity="center"
                    android:paddingBottom="10px"
                    android:paddingTop="10px"
                    android:text="@string/service_store"
                    android:textColor="@color/textgray"
                    android:textSize="22px" />

                <TextView
                    android:id="@+id/tv_homeexpressage"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:drawablePadding="10px"
                    android:drawableTop="@drawable/test_kuaidi"
                    android:gravity="center"
                    android:paddingBottom="10px"
                    android:paddingTop="10px"
                    android:text="@string/service_kd"
                    android:textColor="@color/textgray"
                    android:textSize="22px" />

                <TextView
                    android:id="@+id/tv_homedaiban"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:drawablePadding="10px"
                    android:drawableTop="@drawable/test_qiche"
                    android:gravity="center"
                    android:paddingBottom="10px"
                    android:paddingTop="10px"
                    android:text="@string/service_dai"
                    android:textColor="@color/textgray"
                    android:textSize="22px" />
            </com.zhy.autolayout.AutoLinearLayout>

            <com.zhy.autolayout.AutoLinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tv_homerepair"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:drawablePadding="10px"
                    android:drawableTop="@drawable/test_weixiu"
                    android:gravity="center"
                    android:paddingBottom="10px"
                    android:paddingTop="10px"
                    android:text="@string/shangmenweixiu"
                    android:textColor="@color/textgray"
                    android:textSize="22px" />

                <TextView
                    android:id="@+id/tv_homeunlock"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:drawablePadding="10px"
                    android:drawableTop="@drawable/kaisuo"
                    android:gravity="center"
                    android:paddingBottom="10px"
                    android:paddingTop="10px"
                    android:text="@string/service_lock"
                    android:textColor="@color/textgray"
                    android:textSize="22px" />

                <TextView
                    android:id="@+id/tv_homejiazheng"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:drawablePadding="10px"
                    android:drawableTop="@drawable/test_jiazheng"
                    android:gravity="center"
                    android:paddingBottom="10px"
                    android:paddingTop="10px"
                    android:text="@string/service_clean"
                    android:textColor="@color/textgray"
                    android:textSize="22px"
                    android:visibility="invisible" />
            </com.zhy.autolayout.AutoLinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="10px"
                android:drawableLeft="@drawable/changyongfuwu"
                android:drawablePadding="13px"
                android:paddingBottom="7px"
                android:paddingLeft="8px"
                android:paddingTop="7px"
                android:text="@string/often_service"
                android:textColor="@color/textgray"
                android:textSize="24px" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="4px"
                android:layout_marginLeft="8px"
                android:layout_marginRight="8px"
                android:background="@color/bg1" />

            <!--<com.zhy.autolayout.AutoLinearLayout-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_marginTop="15px"-->
            <!--android:layout_marginLeft="25px"-->
            <!--android:orientation="horizontal">-->
            <!--<TextView-->
            <!--android:layout_width="0dp"-->
            <!--android:layout_weight="1"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:text="@string/jkzs"-->
            <!--android:textSize="24px"-->
            <!--android:textColor="@color/textgray"-->
            <!--android:drawableLeft="@drawable/jiankangzhishi"-->
            <!--android:drawablePadding="5px"/>-->
            <!--<TextView-->
            <!--android:layout_width="0dp"-->
            <!--android:layout_weight="1"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:text="@string/lygg"-->
            <!--android:textSize="24px"-->
            <!--android:textColor="@color/textgray"-->
            <!--android:drawableLeft="@drawable/lvyou"-->
            <!--android:drawablePadding="5px"/>-->
            <!--<TextView-->
            <!--android:layout_width="0dp"-->
            <!--android:layout_weight="1"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:text="@string/hwkg"-->
            <!--android:textSize="24px"-->
            <!--android:textColor="@color/textgray"-->
            <!--android:drawableLeft="@drawable/haiwaigouwu"-->
            <!--android:drawablePadding="5px"/>-->
            <!--<TextView-->
            <!--android:layout_width="0dp"-->
            <!--android:layout_weight="1"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:text="@string/jszb"-->
            <!--android:textSize="24px"-->
            <!--android:textColor="@color/textgray"-->
            <!--android:drawableLeft="@drawable/jiangshizhibo"-->
            <!--android:drawablePadding="5px"/>-->
            <!--</com.zhy.autolayout.AutoLinearLayout>-->
            <com.zhy.autolayout.AutoLinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="25px"
                android:layout_marginTop="20px"
                android:orientation="horizontal">
                <TextView
                    android:id="@+id/ylgh"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:drawableLeft="@drawable/yiliaoguahao"
                    android:text="@string/ylgh"
                    android:textColor="@color/textgray"
                    android:textSize="24px" />

                <TextView
                    android:id="@+id/xxyl"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:drawableLeft="@drawable/xiuxianyule"
                    android:drawablePadding="5px"
                    android:text="@string/xxyl"
                    android:textColor="@color/textgray"
                    android:textSize="24px" />

                <TextView
                    android:id="@+id/mydy"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:drawableLeft="@drawable/maoyandianying"
                    android:drawablePadding="5px"
                    android:text="@string/mydy"
                    android:textColor="@color/textgray"
                    android:textSize="24px" />

                <TextView
                    android:id="@+id/hwwl"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:drawableLeft="@drawable/haiwaiwanle"
                    android:drawablePadding="5px"
                    android:text="@string/hwwl"
                    android:textColor="@color/textgray"
                    android:textSize="24px" />
            </com.zhy.autolayout.AutoLinearLayout>
        </com.zhy.autolayout.AutoLinearLayout>
    </ScrollView>

</com.zhy.autolayout.AutoLinearLayout>