<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >    
    <LinearLayout 
	    android:layout_width="fill_parent"
	    android:layout_height="50dp" 
	    android:layout_alignParentTop="true"
	    android:background="@color/skyblue">
    </LinearLayout>
    <LinearLayout 
	    android:layout_width="fill_parent"
	    android:layout_height="50dp" 
	    android:layout_alignParentBottom="true"
	    android:background="@color/black">
    </LinearLayout>
	<LinearLayout
     	android:layout_width="fill_parent"
	    android:layout_height="fill_parent"
	    android:fitsSystemWindows="true"  
        android:clipToPadding="true"
	    android:orientation="vertical" > 
    	<RelativeLayout
	    	android:layout_width="fill_parent"
	    	android:layout_height="48dp"    	       
			android:layout_marginTop="4.0dip" 
			android:background="@color/skyblue"
	    	>    
     <ImageView
		android:id="@+id/titleBackImageBtn"
		android:src="@drawable/style_button_back_gray"
        android:layout_width="wrap_content"   
        android:layout_height="match_parent" 
     	android:padding="8dp"
        /> 	
	<TextView
		android:layout_width="fill_parent"
		android:layout_height="fill_parent"
		android:singleLine="true"
		android:gravity="center"
		android:text="@string/resetpassword"
		android:textColor="@color/white"
		android:textSize="19.0sp" />
		</RelativeLayout>
	<LinearLayout
	     	android:layout_width="fill_parent"
		    android:layout_height="fill_parent"
		    android:orientation="vertical"
		    android:background="@color/bg1" > 
	<LinearLayout 
   	    android:id="@+id/ll_code"
	    android:layout_width="fill_parent"
		android:orientation="horizontal"
    	android:layout_height="46dp"
    	android:background="@color/white"
    	android:layout_marginTop="20dp">
			
		    <ImageView	  
		        android:id="@+id/iv_phone"      
				android:layout_gravity="center" 
				android:layout_width="26dp"
				android:layout_height="26dp"
				android:layout_marginLeft="20.0dip"
				android:background="@drawable/ico_phone"
				/>							
			<EditText 
			    android:id="@+id/et_phone" 
				android:layout_width="0dp"
				android:layout_weight="1"
				android:layout_height="match_parent"
				android:layout_gravity="center_vertical"
				android:layout_marginLeft="15dp"
				android:textSize="17sp"	
				android:background="@null"
				android:inputType="phone"
				android:textColorHint="@color/texthint"
				android:hint="@string/login_user"			
		 	/>	
			<Button
            android:id="@+id/btn_getcode"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:background="@color/skyblue"
				android:paddingLeft="20dp"
				android:paddingRight="20dp"
            android:text="@string/randomcode"
            android:textColor="@color/white"
            android:layout_centerInParent="true"
            android:layout_alignParentRight="true"/>		
            			
		</LinearLayout>

   		
	<LinearLayout 
		    android:layout_width="fill_parent"
	    	android:layout_height="46dp"
	    	android:background="@color/white"
		android:orientation="horizontal"
	    	android:layout_marginTop="20dp">
		    <ImageView	        
				android:layout_gravity="center" 
				android:layout_width="26dp"
				android:layout_height="26dp" 
				android:layout_marginLeft="20.0dip"
				android:background="@drawable/ico_yzm"
				/>							
			<EditText 
			    android:id="@+id/et_randomcode" 
				android:layout_width="0dp"
				android:layout_weight="1"
				android:layout_height="match_parent"
				android:layout_marginLeft="15dp"
				android:layout_gravity="center_vertical"
				android:textSize="17sp"	
				android:background="@null"
				android:inputType="phone"
				android:textColorHint="@color/texthint"
				android:hint="@string/input_randomcode"			
		 	/>	
		</LinearLayout>

	<LinearLayout 
		    android:layout_width="fill_parent"
	    	android:layout_height="46dp"
	    	android:background="@color/white"
		android:orientation="horizontal"
	    	android:layout_marginTop="20dp">
		    <ImageView	        
				android:layout_gravity="center" 
				android:layout_width="26dp"
				android:layout_height="26dp" 
				android:layout_marginLeft="20.0dip"
				android:background="@drawable/ico_password"
				/>							
			<EditText 
			    android:id="@+id/password" 
				android:layout_width="0dp"
				android:layout_weight="1"
				android:layout_height="match_parent"
				android:layout_marginLeft="15dp"
				android:layout_gravity="center_vertical"
				android:textSize="17sp"	
				android:background="@null"
				android:inputType="textPassword"
				android:textColorHint="@color/texthint"
				android:hint="@string/login_password"			
		 	/>	
		</LinearLayout>	
		

		 <LinearLayout 
	        android:orientation="horizontal"
	    	android:layout_width="fill_parent"
	    	android:layout_height="wrap_content"
	    	android:layout_marginTop="20dp"
	    	>
	        <Button	            
				android:id="@+id/et_register"
				android:layout_width="0dp" 
				android:layout_height="50dp"
				android:layout_weight="1"
				android:text="@string/ok"	
				android:textSize="19sp"
				android:textColor="@color/white"		
				android:background="@drawable/denglu_selector" >
			</Button>		
	    </LinearLayout>	 
	    </LinearLayout>
	    </LinearLayout>  
</RelativeLayout>
